
icon:check[] Restore: A `ClassCastException` has been fixed which could be observed directly after a backup restore operation.

[[v0.29.2]]
== 0.29.2 (18.01.2019)

icon:plus[] Changelog: The changelog execution performance has been increased.

icon:plus[] Consistency Checks: Additional consistency checks and repair actions have been added.

icon:check[] Elasticsearch: Fixed a bug that caused a schema migration to never be finished. This affected nodes with binaries that are readable by the Elasticsearch Ingest Attachment Processor Plugin.

icon:check[] Image: Resizing images will now use the balanced quality setting. This helps with images that suffered from visible aliasing. To make sure that the changes take effect, the cache in `data/binaryImageCache/` must be cleared.

[[v0.29.1]]
== 0.29.1 (16.01.2019)

CAUTION: Because of a change in the image cache, the change below might not apply when an image is already in the cache. To make sure that the changes take effect, the cache in `data/binaryImageCache/` must be cleared.

icon:plus[] Core: Performance of the deletion process has been increased.

icon:plus[] Consistency Checks: Additional consistency checks and repair actions have been added.

icon:plus[] Consistency Checks: The consistency endpoint response will now also list a `repairCount` property which lists the count of repair operations. 
            The response will now only contain the first 200 results. The `outputTruncated` property indicates whether the result has been truncated.

icon:check[] Image: Resizing and cropping will no longer transform the image to JPG format but return an image in the original format. When no image writing plugin for this format is available the fallback is PNG.

icon:check[] Core: Node deletion will now also remove connected lists and micronodes. Previously these elements were not properly removed. On large systems this could lead to increased disk usage.

[[v0.29.0]]
== 0.29.0 (14.01.2019)
